force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/zkmulti__Shipmate_Preference_Info__c.object-meta.xml
<CustomObject>
    <label>Shipping Preference Info</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Shipping Preference Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Preference Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>