force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Entity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Entity__c</fullName>
    <label>Carrier Account Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>