force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Mailer_ID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Mailer_ID__c</fullName>
    <description>DHL Global Mail Mailer ID</description>
    <inlineHelpText>DHL Global Mail Mailer ID</inlineHelpText>
    <label>Carrier Account Mailer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>