force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Test_Account_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Test_Account_Customer_Number__c</fullName>
    <label>Carrier Test Account Customer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>