force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__CarrierAccount_APIID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarrierAccount_APIID__c</fullName>
    <label>Carrier Account API ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>