force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__DefaultImageResolution__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DefaultImageResolution__c</fullName>
    <description>Used only for ZPLII and EPL labels. Default value is 203 dpi</description>
    <inlineHelpText>Used only for ZPLII and EPL labels. Default value is 203 dpi</inlineHelpText>
    <label>Default Image Resolution</label>
    <length>10</length>
    <type>Text</type>
</CustomField>