force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Schedule_Cron__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Schedule_Cron__c</fullName>
    <label>Schedule Cron</label>
    <length>100</length>
    <type>Text</type>
</CustomField>