force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__SecurityQuestion__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SecurityQuestion__c</fullName>
    <label>Security Question</label>
    <length>50</length>
    <type>Text</type>
</CustomField>