force-app/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__SellerId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SellerId__c</fullName>
    <label>Seller Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>